# vectr-lab

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
config/defaults/: risk.yaml  strategy.yaml  universe.yaml
scripts/: run_experiment.py  uv_env.sh
src/vectr_lab/: __init__.py
src/vectr_lab/backtest/: __init__.py  metrics.py  plots.py  runner.py  scan.py
src/vectr_lab/cli/: app.py
src/vectr_lab/config/: __init__.py  loader.py  models.py
src/vectr_lab/config/defaults/: risk.yaml
src/vectr_lab/data/: __init__.py  ingest.py  paths.py
src/vectr_lab/reports/: __init__.py
src/vectr_lab/reports/templates/: summary.md.j2
src/vectr_lab/risk/: __init__.py  rules.py  sizer.py
src/vectr_lab/strategies/: __init__.py  base.py  breakout.py  ma_cross.py
src/vectr_lab/utils/: __init__.py  log.py  time.py
tests/: test_ingest_normalize.py  test_runner.py  test_sizer.py  test_smoke.py
